# Peptitools

./: .gitignore  README.md  docker-compose-backend.yaml  docker-compose-frontend.yaml  docker-compose.yml  peptitools-pod.yaml
backend/: .containerignore  .dockerignore  .gitignore  Containerfile  Dockerfile  README.md  config.ini  entrypoint.sh  pyproject.toml  requirements.txt
backend/files/: activity_table.csv  sample_peptipedia.fasta
backend/files/input_encoders/: aaindex_encoders.csv  clustering_encoders.csv
backend/files/models/activity/: antiviral.joblib
backend/peptitools/: blueprint.py  config.py  main.py  wsgi.py
backend/peptitools/modules/: utils.py
backend/peptitools/modules/bioinformatic_tools/: gene_ontology.py  msa.py  pfam_domain.py  structural_characterization.py
backend/peptitools/modules/database_models/: database.py  materialized_views.py  table_models.py
backend/peptitools/modules/machine_learning_tools/clustering_methods/: alignment_clustering.py  clustering_algorithm.py  clustering_process.py  distance_clustering.py  evaluation_performances.py  graph_clustering.py
backend/peptitools/modules/predictive_models/: activity_list.py  activity_prediction.py  predictive_models.py
backend/peptitools/modules/statistic_tools/: frequency_analysis.py  physicochemical_module.py  statistics.py
backend/peptitools/modules/tools/: fasta_convertor.py  sample_sequences.py
backend/peptitools/routes/: bioinformatic_tools.py  machine_learning_tools.py  predictive_models.py  statistic_tools.py  tools.py
deploy/: .gitignore  build.sh  (+2 more)
(+137 files in other folders)
